stopped processing articles older than a month, css spacing modifications

--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ footer {
 #wire {
     width: 950px;
     margin: 0 auto;
-    padding: 50px 20px 1px 20px;
+    padding: 25px 20px 0 20px;
     background-color: rgba(255,255,255, 0.5);
     box-shadow: 0 10px 20px rgba(0,0,0, 0.1);
     border: 1px solid rgba(255,255,255, 0.6);
@@ -93,7 +93,7 @@ footer {
     }
 
 .section {
-    margin-bottom: 2em;
+    margin: 1.5em 0;
 }
 
 .article {
